Add coloring for manual step column

--- a/jira_devops/xenon_theme/templates/frames/release_notes.html
+++ b/jira_devops/xenon_theme/templates/frames/release_notes.html
@@ -60,7 +60,13 @@
                         </td>
                     {% endif %}
                     {% if ticket_note.manual == True %}
-                        <td><i class="fa-check"></i></td>
+                        <td>
+                            {% if ticket_note.special %}
+                                <i class="fa-check"></i>
+                            {% else %}
+                                <i style="color: red" class="fa-check"></i>
+                            {% endif %}
+                        </td>
                     {% else %}
                         <td></td>
                     {% endif %}
